# TupleNamer

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  main.py  pyproject.toml
src/tuple_namer/: __init__.py  config.py  custom_argument_parser.py  main.py  transaction.py
src/tuple_namer/str_consts/: main.py
src/tuple_namer/str_consts/src/tuple_namer/: __init__.py  config.py  custom_argument_parser.py  transaction.py
src/tuple_namer/str_consts/src/tuple_namer/transform/: transformer.py
src/tuple_namer/transform/: modify_file.py  transformer.py
