[tool.poetry]
name = "tuple_namer"
version = "0.1.0"
description = "Converts tuples to namedtuples where possible"
authors = ["Tesla2000 <fratajczak124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
libcst = "^1.4.0"
toml = "^0.10.2"
litellm = "^1.67.0"
inflect = "^7.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tuple_namer = "tuple_namer:main"
